...
                Section {
                    NavigationLink {
                        LobbyView()
                    } label: {
                        Label("root.play", systemImage: "suit.spade.fill")
                    }
                    .accessibilityIdentifier("playButton")
                }

                Section {
                    NavigationLink {
                        CareerView()
                    } label: {
...

                    NavigationLink {
                        SettingsView()
                    } label: {
                        Label("root.settings", systemImage: "gearshape")
                    }
                    .accessibilityIdentifier("settingsButton")
                }

                Section {
                    LabeledContent("career.points", value: "\(career.profile.points)")
                }
            }
...
